添加了删除的选项，修复了下载完成后文件无法删除的bug

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,5 +26,11 @@
         android:layout_height="wrap_content"
         android:text="pause"
         android:textSize="20sp"/>
+    <Button
+        android:id="@+id/btn_delete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="delete file"
+        android:textSize="20sp"/>
 
 </LinearLayout>
